# rust-github-actions-cross-build-docker-image

./: Cargo.toml  Dockerfile  ci.Dockerfile
.github/workflows/: ci.yaml
src/: main.rs
