[package]
edition = "2018"
name = "rust-github-actions-cross-build-docker-image"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["json"]}
tokio = {version = "1", features = ["full"]}
